--- a/.specs/tasks/tasks.json
+++ b/.specs/tasks/tasks.json
@@ -2488,7 +2488,7 @@
     },
     {
       "id": "AI-MONITOR-001h",
-      "status": "pending",
+      "status": "in-progress",
       "priority": "medium",
       "title": "AI Monitor: LLM Fallback Analyzer",
       "feature": "ai-monitor",
@@ -2936,11 +2936,25 @@
             "oldStatus": "in-progress",
             "newStatus": "pending"
           }
+        },
+        {
+          "taskId": "AI-MONITOR-001h",
+          "timestamp": "2026-02-01T19:09:35.775Z",
+          "type": "started",
+          "message": "Status changed to in-progress (claimed)",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "in-progress",
+            "method": "claimTask"
+          }
         }
       ],
       "timestamps": {
         "createdAt": "2026-02-01T11:33:39.637Z",
-        "updatedAt": "2026-02-01T19:08:00.574Z"
+        "updatedAt": "2026-02-01T19:09:35.775Z",
+        "startedAt": "2026-02-01T19:09:35.775Z"
       }
     },
     {
@@ -3566,7 +3580,7 @@
     },
     {
       "id": "PROC-001g",
-      "status": "pending",
+      "status": "completed",
       "priority": "medium",
       "title": "Process Management: E2E Tests (Full Loop Scenario)",
       "feature": "process-management",
@@ -3786,12 +3800,40 @@
             "oldStatus": "in-progress",
             "newStatus": "pending"
           }
+        },
+        {
+          "taskId": "PROC-001g",
+          "timestamp": "2026-02-01T19:09:35.792Z",
+          "type": "started",
+          "message": "Status changed to in-progress (claimed)",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "in-progress",
+            "method": "claimTask"
+          }
+        },
+        {
+          "taskId": "PROC-001g",
+          "timestamp": "2026-02-01T19:15:17.965Z",
+          "type": "completed",
+          "message": "Completed by Loopwork (parallel worker 2)\n\nSession: loopwork-default-2026-02-01T19-08-02-78093\nIteration: 1",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "in-progress",
+            "newStatus": "completed"
+          }
         }
       ],
       "timestamps": {
         "createdAt": "2026-02-01T17:22:59.584Z",
-        "updatedAt": "2026-02-01T19:08:00.583Z"
-      }
+        "updatedAt": "2026-02-01T19:15:17.965Z",
+        "startedAt": "2026-02-01T19:09:35.792Z",
+        "completedAt": "2026-02-01T19:15:17.965Z"
+      },
+      "failureCount": 0
     },
     {
       "id": "PROC-001h",
@@ -4437,7 +4479,7 @@
     },
     {
       "id": "DYNAMICT-004",
-      "status": "pending",
+      "status": "completed",
       "priority": "medium",
       "title": "Add AI-powered task analysis using LLM",
       "feature": "dynamic-task-creation",
@@ -4480,12 +4522,40 @@
             "oldStatus": "in-progress",
             "newStatus": "pending"
           }
+        },
+        {
+          "taskId": "DYNAMICT-004",
+          "timestamp": "2026-02-01T19:09:35.810Z",
+          "type": "started",
+          "message": "Status changed to in-progress (claimed)",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "in-progress",
+            "method": "claimTask"
+          }
+        },
+        {
+          "taskId": "DYNAMICT-004",
+          "timestamp": "2026-02-01T19:12:07.834Z",
+          "type": "completed",
+          "message": "Completed by Loopwork (parallel worker 3)\n\nSession: loopwork-default-2026-02-01T19-08-02-78093\nIteration: 1",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "in-progress",
+            "newStatus": "completed"
+          }
         }
       ],
       "timestamps": {
         "createdAt": "2026-02-01T19:01:36.938Z",
-        "updatedAt": "2026-02-01T19:08:00.590Z"
-      }
+        "updatedAt": "2026-02-01T19:12:07.834Z",
+        "startedAt": "2026-02-01T19:09:35.810Z",
+        "completedAt": "2026-02-01T19:12:07.834Z"
+      },
+      "failureCount": 0
     },
     {
       "id": "DYNAMICT-005",
@@ -4657,8 +4727,37 @@
             "oldStatus": "completed",
             "newStatus": "pending"
           }
+        },
+        {
+          "taskId": "RETRY-003",
+          "timestamp": "2026-02-01T19:09:35.826Z",
+          "type": "started",
+          "message": "Status changed to in-progress (claimed)",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "in-progress",
+            "method": "claimTask"
+          }
+        },
+        {
+          "taskId": "RETRY-003",
+          "timestamp": "2026-02-01T19:11:59.429Z",
+          "type": "reset",
+          "message": "Task reset from in-progress to pending",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "in-progress",
+            "newStatus": "pending"
+          }
         }
-      ]
+      ],
+      "timestamps": {
+        "createdAt": "2026-02-01T19:09:35.826Z",
+        "updatedAt": "2026-02-01T19:11:59.429Z"
+      }
     },
     {
       "id": "RETRY-004",
@@ -15306,7 +15405,7 @@
     },
     {
       "id": "ARCHWAVE-092",
-      "status": "pending",
+      "status": "in-progress",
       "priority": "high",
       "title": "Implement Resilience Strategies",
       "feature": "ARCH-WAVE-7",
@@ -15315,7 +15414,8 @@
       ],
       "timestamps": {
         "createdAt": "2026-02-01T06:58:46.117Z",
-        "updatedAt": "2026-02-01T19:08:00.565Z"
+        "updatedAt": "2026-02-01T19:09:35.675Z",
+        "startedAt": "2026-02-01T19:09:35.675Z"
       },
       "events": [
         {
@@ -16369,6 +16469,19 @@
           "metadata": {
             "oldStatus": "in-progress",
             "newStatus": "pending"
+          }
+        },
+        {
+          "taskId": "ARCHWAVE-092",
+          "timestamp": "2026-02-01T19:09:35.675Z",
+          "type": "started",
+          "message": "Status changed to in-progress (claimed)",
+          "level": "info",
+          "actor": "system",
+          "metadata": {
+            "oldStatus": "pending",
+            "newStatus": "in-progress",
+            "method": "claimTask"
           }
         }
       ]
