feat: implement model sleep mode instead of permanent disable
## Model Sleep Mode

Instead of permanently disabling models after 3 failures, models now:
- Go to sleep for 10 minutes
- Automatically wake up and become available again
- Show clear sleep status and wake-up time in logs

## Changes

- Changed default circuit breaker reset timeout from 5 to 10 minutes
- Updated terminology: 'disabled' → 'sleeping'
- Added getSleepingModels() method
- Added getModelWakeUpTime() method
- Added getModelSleepStatus() with human-readable time remaining
- Added onModelWakeUp() callback for logging wake-ups
- Added getTimeUntilResetText() for user-friendly time formatting
- Updated log messages to show sleep duration and wake-up time

## Example

Before:
  ERROR: [CircuitBreaker] Model X disabled after 3 failures

After:
  WARN: [CircuitBreaker] Model X is sleeping after 3 failures
        (sleeping for 10m 0s, wakes up at 04:02:49)
  INFO: [CircuitBreaker] Model X woke up from sleep and is available again

## Tests

- All 42 model-selector tests passing
- All 29 circuit-breaker tests passing

--- a/package.json
+++ b/package.json
@@ -16,11 +16,22 @@
     "dev:dashboard": "turbo run dev --filter @loopwork-ai/dashboard",
     "dev:web": "turbo run dev --filter @loopwork-ai/dashboard-web",
     "publish:all": "bun run build && bun run --filter './packages/*' publish",
-    "prepare": "husky"
+    "prepare": "simple-git-hooks"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "bun run check:circular && bunx lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "lint-staged": "^16.2.7",
     "madge": "^8.0.0",
+    "simple-git-hooks": "^2.13.1",
     "turbo": "^2.7.6",
     "typescript": "^5.0.0"
   },
